# IVERI-HYBRID-SLM-MODEL

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IVERI_DATA_PIPELINE_COMPLETE.md  IVERI_PROJECT_MASTER.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  VERSION  debug_run.py  graphify.py  implementation_plan.md  pyproject.toml  replay_campaign.py  repo_knowledge_graph.json  requirements-dev.txt  requirements.txt  run_campaign.py  scratch_diag.py  setup.py  task.md  test_curriculum_only.py  test_evaluator_subimports.py  test_imports.py  test_mixer_only.py  test_single_import.py  test_subimports.py  train.py
baselines/: __init__.py  baseline_transformer.py  tiny_mamba.py
configs/: __init__.py  base_config.py  coding_config.py  data_pipeline_config.py  distributed_config.py  instruction_config.py  parameter_breakdown.json  preference_config.py  research_config.py
core/: __init__.py  byte_vocab.py  constants.py  exceptions.py  factory.py  interfaces.py  registry.py
data/: VERSION.json  __init__.py  dataloader.py  dataset_manifest.json  dataset_utils.py  prepare_tinystories.py  preprocessing.py
docs/: TRAINING_GUIDE.md  dependency_graph.md
evaluation/: __init__.py  alignment_evaluator.py  alignment_inspector.py  alignment_prompt_suite.py  arch_eval.py  benchmark.py  checkpoint_compare.py  code_execution.py  code_inspector.py  code_quality_analyzer.py  coding_evaluator.py  coding_prompt_suite.py  contamination_checker.py  distributed_evaluator.py  evaluator.py  generation.py  generation_inspector.py  humaneval_benchmark.py  instruction_retention.py  mbpp_benchmark.py  memory_tracker.py  perplexity.py  preference_benchmark.py  pretraining_eval.py  prompt_suite.py  report_generator.py  response_inspector.py  security_scanner.py  sft_evaluator.py
experiments/: README.md
inference/: __init__.py  __main__.py  benchmark.py  byte_tokenizer.py  cli.py  engine.py  loader.py  sampling.py
model/: __init__.py  attention.py  backbone.py  iveri_core.py  norms.py  rope.py  swiglu.py
quality/: format.py  lint.py  run_all.py  typecheck.py
research/: __init__.py  ablation.py  ablation_audit.py  artifacts.py  artifacts_graph.py  baselines.py  benchmark_engineering.py  benchmark_integrity.py  benchmark_research.py  byte_vocab_audit.py  calibration.py  campaign_config.py  campaign_dataset_validator.py  campaign_health_monitor.py  campaign_lock.json  campaign_lock.py  campaign_runner.py  causality_probe.py  checkpoint_manager.py  claim_validator.py  compare_runs.py  cost_estimator.py  dashboard.py  documentation_audit.py  documentation_discrepancies_audit.py  energy_profiler.py  entropy_routing_audit.py  execution_backend.py  experiment_manifest.py  experiment_registry.py  experiment_runner.py  flops.py  (+26 more)
(+665 files in other folders)
